# multi-process-logger

./: .gitignore  Cargo.toml  README.md
logger-client/: Cargo.toml
logger-client/src/: lib.rs
logger-server/: Cargo.toml
logger-server/src/: main.rs
test-process/: Cargo.toml
test-process/src/: main.rs
