[package]
name = "logger-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
tui = "0.19.0"
crossterm = "0.26.0"
clap = { version = "4.1.4", features=["derive"] }


[dependencies.nix]
git = 'https://github.com/JonathanWoollett-Light/nix'
rev = '87da68c0a8d09333e72199fe978b2d6c5191d11b'
features = []